# django-samples

./: .gitignore  README.md  pyproject.toml
app/config/: settings.py  urls.py
app/drf_base64/: apis.py  doc.py  fields.py  inspector.py  models.py  serializers.py  tests.py  urls.py
app/drf_base64/migrations/: 0002_samplebase64filemodel.py  0003_auto_20200330_1641.py
django-channels/: docker-compose.yml  pyproject.toml
django-channels/.config/: Dockerfile.django  gunicorn.py  production.nginx
django-channels/chat/: consumers.py  routing.py  urls.py  views.py
django-channels/chat/templates/chat/: index.html  room.html
django-channels/config/: routing.py  settings.py  urls.py
django-channels/members/: admin.py  models.py  tests.py
django-channels/members/migrations/: 0001_initial.py  0002_auto_20200415_0959.py  0003_auto_20200415_1053.py  0004_auto_20200416_0542.py
django-channels/members/templates/registration/: login.html
drf-base64/: pyproject.toml
drf-base64/config/: settings.py
drf-base64/drf_base64/: apis.py  apps.py  doc.py  fields.py  inspector.py  serializers.py  tests.py  urls.py
drf-base64/drf_base64/migrations/: 0001_initial.py
drf-datetime/: pyproject.toml  pytest.ini
drf-datetime/config/: settings.py
drf-datetime/sample/: models.py  serializers.py  tests.py
drf-datetime/sample/migrations/: 0001_initial.py
save_image/: pyproject.toml
save_image/config/: settings.py
save_image/sample/management/commands/: download.py
save_image/sample/migrations/: 0001_initial.py
