[tool.poetry]
name = "django-channels"
version = "0.1.0"
description = ""
authors = ["lhy <dev@lhy.kr>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.4"
django-extensions = "^2.2.9"
channels = "^2.4.0"
channels_redis = "^2.4.2"
gunicorn = "^20.0.4"
model_bakery = "^1.1.0"

[tool.poetry.dev-dependencies]
notebook = "^6.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
