[tool.poetry]
name = "drf-datetime"
version = "0.1.0"
description = ""
authors = ["lhy <dev@lhy.kr>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
django-extensions = "^3.0.2"
djangorestframework = "^3.11.0"
model_bakery = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
